trunk/Archive2/55/05ff38d4083bc5/output
main.cpp: In function 'int main(int, char**)':
main.cpp:21:17: error: invalid conversion from 'void*' to 'Base*' [-fpermissive]
     Base *vob = vo;
                 ^
main.cpp:24:19: error: invalid conversion from 'void*' to 'Object*' [-fpermissive]
     Object *voo = vo;
                   ^
main.cpp:27:19: error: invalid conversion from 'Base*' to 'Object*' [-fpermissive]
     Object *boo = bo;
                   ^
main.cpp:18:11: warning: unused variable 'bp' [-Wunused-variable]
     Base *bp = p;
           ^
main.cpp:20:11: warning: unused variable 'vp' [-Wunused-variable]
     void *vp = &p;
           ^
main.cpp:21:11: warning: unused variable 'vob' [-Wunused-variable]
     Base *vob = vo;
           ^
main.cpp:22:11: warning: unused variable 'vobc' [-Wunused-variable]
     Base *vobc = static_cast<Base*>(vo);
           ^
main.cpp:23:11: warning: unused variable 'vobr' [-Wunused-variable]
     Base *vobr = reinterpret_cast<Base*>(vo);
           ^
main.cpp:24:13: warning: unused variable 'voo' [-Wunused-variable]
     Object *voo = vo;
             ^
main.cpp:25:13: warning: unused variable 'vooc' [-Wunused-variable]
     Object *vooc = static_cast<Object*>(vo);
             ^
main.cpp:26:13: warning: unused variable 'voor' [-Wunused-variable]
     Object *voor = reinterpret_cast<Object*>(vo);
             ^
main.cpp:27:13: warning: unused variable 'boo' [-Wunused-variable]
     Object *boo = bo;
             ^
main.cpp:28:13: warning: unused variable 'booc' [-Wunused-variable]
     Object *booc = static_cast<Object*>(bo);
             ^
main.cpp:29:13: warning: unused variable 'boor' [-Wunused-variable]
     Object *boor = reinterpret_cast<Object*>(bo);
             ^
